--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -3,6 +3,7 @@ i3_package: i3-wm
 libreoffice_package: libreoffice-still
 firefox_package: firefox
 chromium_package: chromium
+ssh_package: openssh
 userpass: msh
 user: matt
 fd_package: fd
