--- a/roles/base/tasks/conky.yml
+++ b/roles/base/tasks/conky.yml
@@ -2,6 +2,16 @@
 #   tags: conky
 #   command: mv /etc/conky/conky.conf /etc/conky/conky.conf.bak
 
+- name: create conky directory
+  tags: conky
+  file:
+    path: /etc/conky
+    state: directory
+    mode: 0755
+    owner: root
+    group: root
+
+
 - name: download new conky config file
   tags: conky
   copy:
