fixing arch packages

--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -43,7 +43,7 @@
       - caja
       - discord
       - ark
-      - nomacs
+      # - nomacs  #not in Arch repos
       - dolphin
       - fastfetch
       - xsel
