--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,7 +9,8 @@
   - include_tasks: tasks/geany.yml
   - include_tasks: tasks/conky.yml
   - include_tasks: tasks/fonts.yml
-  # - include_tasks: tasks/onedrivegui.yml   ## Can't use with Arch
+  - include_tasks: tasks/onedrivegui.yml   ## Can't use with Arch
+    when: ansible_distribution != "Archlinux"
   - include_tasks: tasks/nano.yml
   - include_tasks: fzf.yml
 
