--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -29,7 +29,7 @@
       - python-psutil
 
       # Terminal/Shell
-      - ttf-nerd-fonts-symbols-2048-em
+      - ttf-nerd-fonts-symbols
       - awesome-terminal-fonts
       - ttf-dejavu
       - otf-font-awesome
