fixing arch packages

--- a/roles/arch/tasks/i3config.yml
+++ b/roles/arch/tasks/i3config.yml
@@ -51,11 +51,11 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
-- name: set wallpaper
-  tags: nitrogen
-  become_user: "{{ user }}"
-  command:
-    cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
+# - name: set wallpaper
+#   tags: nitrogen
+#   become_user: "{{ user }}"
+#   command:
+#     cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
 
 - name: install polybar config file
   tags: polybar,i3
