--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -55,6 +55,8 @@
   get_url:
     url: https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
     dest: /home/{{ user }}
+    owner: "{{ user }}"
+    group: "{{ user }}"
 
 - name: install qt5-webkit
   pacman:
