--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -49,6 +49,7 @@
   become_user: "{{ user }}"
   shell:
     cmd: xdg-user-dirs-update
+  args:
     chdir: /home/{{ user }}
     executable: /bin/bash
 
