--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -3,6 +3,38 @@
   community.general.pacman:
     name: '{{item}}'
   loop:
+      # Base
+      - zsh
+      - zsh-syntax-highlighting
+      - zsh-autosuggestions
+      - tilix
+      - htop
+      - conky
+      - ncdu
+      - bat
+      - samba
+      - cifs-utils
+      - "{{ firefox_package }}"
+      - thunderbird
+      - "{{ libreoffice_package }}"
+      - gnupg
+      - geany
+      - unzip
+      - dconf-editor
+      - "{{ chromium_package }}"
+      - "{{ ssh_package }}"
+      - btop
+      - copyq
+      - "{{ fd_package }}"
+      - fzf
+      - ripgrep
+      - duf
+      - vim
+      - vi
+      # - smbclient
+      - neofetch
+      - rsync
+
       # Desktop environment
       - xorg
       - lightdm
