--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -115,12 +115,17 @@
       alias i3c='vim ~/.config/i3/config'
       alias pb='vim ~/.config/polybar/config.ini'
 
+# - name: set wallpaper
+#   tags: nitrogen
+#   become_user: "{{ user }}"
+#   command:
+#     cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
+
 - name: set wallpaper
   tags: nitrogen
   become_user: "{{ user }}"
   command:
-    cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
-
+    cmd: "nitrogen /usr/share/wallpapers/arch.png"
 
 # - name: back up vimrc file
 #   tags: vimrc
