--- a/local.yml
+++ b/local.yml
@@ -42,12 +42,20 @@
 
 - hosts: localhost
   connection: local
+  tags: fedora,debian,lubuntu,void,arch
+  become: true
+  roles:
+    - role: arch
+      when: ansible_distribution == "Archlinux"
+
+- hosts: localhost
+  connection: local
   tags: base
   become: true
   roles:
     - role: base
       # when: hostname.stdout != "cbpp"
-      when: ansible_distribution != "Archlinux"
+      # when: ansible_distribution != "Archlinux"
 
 - hosts: localhost
   connection: local
@@ -70,5 +78,5 @@
       when: ansible_distribution == "Void"
     - role: ubuntu
       when: ansible_distribution == "Ubuntu" and ansible_hostname != "ubuntuserver"
-    - role: arch
-      when: ansible_distribution == "Archlinux"
+    # - role: arch
+    #   when: ansible_distribution == "Archlinux"
