--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,6 +3,8 @@
 - block:
   - include_tasks: ../arch/tasks/users.yml
     when: ansible_distribution == "Archlinux"
+  - include_tasks: ../arch/tasks/packages.yml
+    when: ansible_distribution == "Archlinux"
   - include_tasks: directories.yml
   - include_tasks: tasks/packages.yml
   - include_tasks: configs.yml
