--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -45,27 +45,14 @@
     group: "{{ user }}"
     backup: yes
 
-- name: Create home directories
-  become_user: "{{ user }}"
-  shell:
-    cmd: xdg-user-dirs-update
-  args:
-    chdir: /home/{{ user }}
-    executable: /bin/bash
-
-
-# - name: copy script
-#   copy:
-#     src: files/script.sh
-#     dest: /home/{{ user }}/
-#     owner: "{{ user }}"
-#     group: "{{ user }}"
-#     mode: +x
-#     backup: yes
-
-# - name: run script
+# - name: Create home directories
 #   become_user: "{{ user }}"
-#   shell: /home/{{ user }}/script.sh
+#   shell:
+#     cmd: xdg-user-dirs-update
+#   args:
+#     chdir: /home/{{ user }}
+#     executable: /bin/bash
+
 
 - name: download qt5-webkit
   get_url:
