--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -93,7 +93,7 @@
 - name: add extra Arch aliases - configs
   blockinfile:
     path: /home/{{ user }}/aliasrc
-    insertafter: "alias zsrc='source ~/.zshrc'"
+    insertbefore: "alias v='vim'"
     block: |
       alias i3config='vim ~/.config/i3/config' # Quick access to the i3 config file
       alias polybar='vim ~/.config/polybar/config.ini'  # Quick access to polybar config file
