--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -14,6 +14,7 @@
   - include_tasks: audacious.yml
   - include_tasks: docker.yml
   - include_tasks: thunderbird-systray.yml
+  - include_tasks: ../arch/tasks/obsidian.yml
   - include_tasks: work.yml
     # when: work is defined
 
