--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 
 - block:
-  - include_tasks: users.yml
-  - include_tasks: packages.yml
+  # - include_tasks: users.yml
+  # - include_tasks: packages.yml
   - include_tasks: directories.yml
   # - include_tasks: ../base/tasks/configs.yml
   - include_tasks: lightdm.yml
@@ -20,6 +20,6 @@
   - include_tasks: ../base/tasks/onedrivegui.yml
   - include_tasks: ../void/tasks/onedrive.yml
   - include_tasks: tilix_config.yml
-
+  - include_tasks: obsidian.yml
 
   # - include_tasks: autologin.yml
