--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -56,6 +56,8 @@
   file:
     path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
     mode: +x
+    owner: "{{ user }}"
+    group: "{{ user }}"
 
 - name: edit pacman-updates script
   lineinfile:
