updated polybar config

--- a/roles/arch/files/config.ini
+++ b/roles/arch/files/config.ini
@@ -28,16 +28,41 @@ alert = #A54242
 disabled = #707880
 orange = #ff9e64
 cyan = #2ac3de
+black = #000000
+white = #ffffff
+green1 = #32a852
+green2 = #6be38b
+lgreen1 = #50cc9e
+lgreen2 = #9bebcd
+red1 = #cc241d
+red2 = #fb4934
+orange1 = #fcab30
+orange2 = #fcc36d
+purple1 = #cd4ff7
+purple2 = #e190fc
+pink1 = #fa2fac
+pink2 = #fa78c8
+dorange1 = #d65d0e
+dorange2 = #fe8019
+lime1 = #d1fa61
+lime2 = #e3fc9d
+yellow1 = #98971a
+yellow2 = #b8bb28
+blue1 = #1938ff
+blue2 = #3f57f2
+turq1 = #00fbff
+turq2 = #abfeff
 
 [bar/example]
 width = 100%
-height = 13pt
+height = 15pt
 radius = 6
 bottom = true
 
 ; dpi = 96
 
-background = ${colors.background}
+#background = ${colors.background}
+background = ${colors.black}
 foreground = ${colors.foreground}
 
 line-size = 1pt
@@ -45,15 +70,18 @@ line-size = 1pt
 border-size = 3pt
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
-module-margin = 1
+padding-left = 0.5
+#padding-right = 1
+padding-right = 0.5
+#module-margin = 1
+module-margin = 0
 
-separator = |
+separator = .
 separator-foreground = ${colors.disabled}
 
 #Font-0 = monospace;2
 font-0 = "DejaVu Sans,DejaVu Sans Condensed:style=Condensed,Book:size=9;2"
+#font-0 = "DejaVu Sans,DejaVu Sans Condensed:style=Condensed Bold,Bold:size=8;2"
 #font-0 = "Nimbus Sans Narrow:style=Regular:size=9;2"
 #font-0 = "NotoSans Nerd Font:style=Condensed,Regular:size=11;2"
 font-1 = "FontAwesome:style=Regular:size=10;2"
@@ -64,7 +92,8 @@ label-active-font = 0
 
 modules-left = i3 xwindow
 ; modules-left = xworkspaces xwindow inbox-imap-pythongpg
-modules-right = filesystem pulseaudio memory cpu wlan eth date updates-pacman powermenu
+modules-center = date
+modules-right = pulseaudio filesystem memory cpu wlan eth updates-pacman inbox-imap-pythongpg powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -125,8 +154,11 @@ ws-icon-3 = 4;4:
 ws-icon-4 = 5;5:ﴬ
 ws-icon-5 = 6;6:
 ws-icon-6 = 7;7:
-ws-icon-7 = 8;8:ﭮ
-ws-icon-8 = 9;9:
+ws-icon-7 = 8;8:
+#ws-icon-7 = 8;8:ﭮ
+#ws-icon-7 = 8;8:
+#ws-icon-8 = 9;9:
+ws-icon-8 = 9;9:
 ws-icon-9 = 10;10:
 ws-icon-default = 
 
@@ -152,7 +184,14 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-label-foreground = #2ac3de
+#label-foreground = #2ac3de
+label-foreground = ${colors.black}
+label-background = ${colors.green2}
+format-prefix = ""
+format-prefix-background = ${colors.green1}
+format-prefix-foreground = ${colors.black}
+label-padding = 1
+format-prefix-padding = 1
 
 [module/filesystem]
 type = internal/fs
@@ -163,9 +202,17 @@ mount-0 = /
 
 #label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 #label-mounted = %mountpoint%%{F-} %percentage_used%% (%free% free / %total% total)
-label-mounted = %{F#2ac3de}  %{F-} %percentage_used%% (%free% free / %total% total)
-label-mounted-foreground = ${colors.cyan}
-
+#label-mounted = %{F#2ac3de}  %{F-} %percentage_used%% (%free% free / %total% total)
+#label-mounted = %{F#000000}  %{F000000} %percentage_used%% (%free% free / %total% total)
+#label-mounted-foreground = ${colors.cyan}
+format-mounted-prefix = ""
+format-mounted-prefix-foreground = ${colors.black}
+format-mounted-prefix-background = ${colors.orange1}
+label-mounted-foreground = ${colors.black}
+label-mounted-background = ${colors.orange2}
+label-mounted = %percentage_used%% (%free% / %total%)
+label-mounted-padding = 1
+format-mounted-prefix-padding = 1
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -174,14 +221,20 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 
 #format-volume-prefix = "VOL "
-format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = ""
+#format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.black}
+format-volume-prefix-background = ${colors.red1}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
+label-volume-foreground = ${colors.black}
+label-volume-background = ${colors.red2}
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+label-volume-padding = 1
+format-volume-prefix-padding = 1
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -200,20 +253,33 @@ label-indicator-background = ${colors.secondary}
 type = internal/memory
 interval = 30
 #format-prefix = "RAM "
-format-prefix = " "
+format-prefix = ""
 ;format-prefix-foreground = ${colors.primary}
-format-prefix-foreground = ${colors.cyan}
+#format-prefix-foreground = ${colors.cyan}
+format-prefix-foreground = ${colors.black}
+format-prefix-background = ${colors.purple1}
 #label = %percentage_used:2%%
-label = %used% used / %free% free
+label = %used% / %free%
+label-foreground = ${colors.black}
+label-background = ${colors.purple2}
+label-padding = 1
+format-prefix-padding = 1
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 #format-prefix = "CPU "
 #format-prefix = " "
-format-prefix = "﬙ "
-format-prefix-foreground = ${colors.primary}
+format-prefix = "﬙"
+#format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.black}
+format-prefix-background = ${colors.turq1}
 label = %percentage:2%%
+label-foreground = ${colors.black}
+label-background = ${colors.turq2}
+label-padding = 1
+format-prefix-padding = 1
+label-width = 10pt
 
 [network-base]
 type = internal/network
@@ -234,12 +300,25 @@ interface-type = wired
 interval = 2
 ;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%  %downspeed%   %upspeed%
 #label-connected = %{F#2ac3de}%ifname%%{F-} %local_ip% %{F#ff9e64}  %{F#C5C8C6} %downspeed% %{F#ff9e64}  %{F#C5C8C6} %upspeed%
-label-connected = %{F#2ac3de}%{F-} %local_ip% %{F#ff9e64}  %{F#C5C8C6} %downspeed% %{F#ff9e64}  %{F#C5C8C6} %upspeed%
+#label-connected = %{F#2ac3de}%{F-} %local_ip% %{F#ff9e64}  %{F#C5C8C6} %downspeed% %{F#ff9e64}  %{F#C5C8C6} %upspeed%
+format-connected-prefix = ""
+format-connected-prefix-foreground = ${colors.black}
+format-connected-prefix-background = ${colors.pink1}
+
+label-connected = %local_ip% %{F#ffffff}  %{F#000000} %downspeed% %{F#ffffff}  %{F#000000} %upspeed%
+label-connected-foreground = ${colors.black}
+label-connected-background = ${colors.pink2}
+label-connected-padding = 1
+format-connected-prefix-padding = 1
 
 
 [module/date]
 type = internal/date
 interval = 1
+format-prefix = ""
+#format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.black}
+format-prefix-background = ${colors.dorange1}
 
 #date = %H:%M
 #date-alt = %Y-%m-%d %H:%M:%S
@@ -247,8 +326,12 @@ interval = 1
 date = %b %d %H:%M
 
 label = %date%
+label-foreground = ${colors.black}
+label-background = ${colors.dorange2}
 ;label-foreground = ${colors.primary}
-label-foreground = ${colors.cyan}
+#label-foreground = ${colors.cyan}
+label-padding = 1
+format-prefix-padding = 1
 
 [module/updates]
 type = custom/script
@@ -263,13 +346,26 @@ type = custom/script
 exec = ~/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
 interval = 20
 format-prefix = " "
-format-prefix-foreground = ${colors.orange}
+#format-prefix-foreground = ${colors.orange}
+format-prefix-foreground = ${colors.black}
+format-prefix-background = ${colors.yellow1}
+label-background = ${colors.yellow2}
+label-foreground = ${colors.black}
+label-padding = 1
+format-prefix-padding = 1
 
 [module/inbox-imap-pythongpg]
 type = custom/script
-exec = ~/git/polybar-scripts/polybar-scripts/inbox-imap-pythongpg/inbox-imap-python.py
+exec = ~/git/polybar/polybar-scripts/inbox-imap-pythongpg/inbox-imap-python.py
 interval = 60
-format-prefix = "  "
+format-prefix = ""
+format-prefix-foreground = ${colors.black}
+format-prefix-background = ${colors.lgreen1}
+label-foreground = ${colors.black}
+label-background = ${colors.lgreen2}
+label-padding = 1
+format-prefix-padding = 1
+
 
 [module/powermenu]
 type = custom/menu
@@ -300,17 +396,4 @@ menu-1-1-exec = menu-open-0
 
 menu-2-0 = "Power off"
 #menu-2-0-exec = poweroff
-menu-2-0-exec = shutdown
-menu-2-1 = "Cancel "
-menu-2-1-exec = menu-open-0
-
-menu-3-0 = "Log out"
-menu-3-0-exec = i3-msg exit
-menu-3-1 = "Cancel "
-menu-3-1-exec = menu-open-0
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
-
-; vim:ft=dosini
+menu-2-0-exec = "shutdown 
