updated polybar config

--- a/roles/arch/files/config.ini
+++ b/roles/arch/files/config.ini
@@ -151,10 +151,10 @@ ws-icon-1 = 2;2:
 ws-icon-2 = 3;3:
 ws-icon-3 = 4;4:
 #ws-icon-4 = 5;5:
-ws-icon-4 = 5;5:ﴬ
+ws-icon-4 = 5;5:
 ws-icon-5 = 6;6:
 ws-icon-6 = 7;7:
-ws-icon-7 = 8;8:
+ws-icon-7 = 8;8:󰙯
 #ws-icon-7 = 8;8:ﭮ
 #ws-icon-7 = 8;8:
 #ws-icon-8 = 9;9:
@@ -187,7 +187,7 @@ label = %title:0:60:...%
 #label-foreground = #2ac3de
 label-foreground = ${colors.black}
 label-background = ${colors.green2}
-format-prefix = ""
+format-prefix = "󰍹"
 format-prefix-background = ${colors.green1}
 format-prefix-foreground = ${colors.black}
 label-padding = 1
@@ -205,7 +205,7 @@ mount-0 = /
 #label-mounted = %{F#2ac3de}  %{F-} %percentage_used%% (%free% free / %total% total)
 #label-mounted = %{F#000000}  %{F000000} %percentage_used%% (%free% free / %total% total)
 #label-mounted-foreground = ${colors.cyan}
-format-mounted-prefix = ""
+format-mounted-prefix = "󰋊"
 format-mounted-prefix-foreground = ${colors.black}
 format-mounted-prefix-background = ${colors.orange1}
 label-mounted-foreground = ${colors.black}
@@ -253,7 +253,7 @@ label-indicator-background = ${colors.secondary}
 type = internal/memory
 interval = 30
 #format-prefix = "RAM "
-format-prefix = ""
+format-prefix = "󰍛"
 ;format-prefix-foreground = ${colors.primary}
 #format-prefix-foreground = ${colors.cyan}
 format-prefix-foreground = ${colors.black}
@@ -270,7 +270,7 @@ type = internal/cpu
 interval = 2
 #format-prefix = "CPU "
 #format-prefix = " "
-format-prefix = "﬙"
+format-prefix = ""
 #format-prefix-foreground = ${colors.primary}
 format-prefix-foreground = ${colors.black}
 format-prefix-background = ${colors.turq1}
@@ -301,7 +301,7 @@ interval = 2
 ;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%  %downspeed%   %upspeed%
 #label-connected = %{F#2ac3de}%ifname%%{F-} %local_ip% %{F#ff9e64}  %{F#C5C8C6} %downspeed% %{F#ff9e64}  %{F#C5C8C6} %upspeed%
 #label-connected = %{F#2ac3de}%{F-} %local_ip% %{F#ff9e64}  %{F#C5C8C6} %downspeed% %{F#ff9e64}  %{F#C5C8C6} %upspeed%
-format-connected-prefix = ""
+format-connected-prefix = "󰛳"
 format-connected-prefix-foreground = ${colors.black}
 format-connected-prefix-background = ${colors.pink1}
 
@@ -358,7 +358,7 @@ format-prefix-padding = 1
 type = custom/script
 exec = ~/git/polybar/polybar-scripts/inbox-imap-pythongpg/inbox-imap-python.py
 interval = 60
-format-prefix = ""
+format-prefix = "󰇮"
 format-prefix-foreground = ${colors.black}
 format-prefix-background = ${colors.lgreen1}
 label-foreground = ${colors.black}
