--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -66,6 +66,20 @@
     regexp: 'echo "# $updates"'
     line: 'echo "$updates"'
 
+- name: edit inbox-imap script-1
+  lineinfile:
+    dest: /home/{{ user }}/git/polybar/polybar-scripts/inbox-imap-pythongpg/inbox-imap-python.py
+    state: present
+    regexp: '^obj = "'
+    line: 'obj = imaplib.IMAP4_SSL('imap.gmail.com', 993)'
+
+- name: edit inbox-imap script-2
+  lineinfile:
+    dest: /home/{{ user }}/git/polybar/polybar-scripts/inbox-imap-pythongpg/inbox-imap-python.py
+    state: present
+    regexp: '^obj.login'
+    line: 'obj.login('msh1921@jagmail.southalabama.edu', password)'
+
 - name: Clone yay
   become_user: "{{ user }}"
   git:
