--- a/roles/arch/tasks/users.yml
+++ b/roles/arch/tasks/users.yml
@@ -14,9 +14,9 @@
     create_home: true
     password: "{{ userpass | password_hash('sha512') }}"
     generate_ssh_key: true
-    ssh_key_file: /home/{{ user }}/.ssh/id_ed25519
+    ssh_key_file: /home/{{ user }}/.ssh/id_rsa
     ssh_key_comment: "arch linux"
-    ssh_key_type: ed25519
+    ssh_key_type: rsa
     update_password: on_create
 
 - name: allow wheel sudo
