--- a/roles/antix/tasks/files.yml
+++ b/roles/antix/tasks/files.yml
@@ -125,7 +125,7 @@
 
 - name: download Teams AppImage
   get_url: 
-    src: https://github.com/IsmaelMartinez/teams-for-linux/releases/download/v1.3.23/teams-for-linux-1.3.23.AppImage
+    url: https://github.com/IsmaelMartinez/teams-for-linux/releases/download/v1.3.23/teams-for-linux-1.3.23.AppImage
     dest: /home/{{ user }}/Downloads/
     mode: +x
     owner: "{{ user }}"
