--- a/roles/lubuntu/tasks/vscodium.yml
+++ b/roles/lubuntu/tasks/vscodium.yml
@@ -5,7 +5,7 @@
     cmd: wget -qO - https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg | gpg --dearmor | sudo dd of=/usr/share/keyrings/vscodium-archive-keyring.gpg
   args:
     executable: /bin/bash
-    warn: false
+    # warn: false
 
 - name: add vscodium repository
   tags: vscodium
