--- a/roles/antix/tasks/files.yml
+++ b/roles/antix/tasks/files.yml
@@ -35,7 +35,7 @@
   tags: nitrogen
   become_user: "{{ user }}"
   command:
-    cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
+    cmd: "nitrogen --set-auto --save /usr/share/wallpapers/debian.jpg"
 
 - name: install Araita-Dark theme
   tags: theme
