--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -52,10 +52,13 @@
     group: "{{ user }}"
 
 - name: change pacman-updates script to executable
-  tags: polybar,pacman
-  file:
-    path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
-    mode: +x
+  command: "chmod +x /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh"
+
+# - name: change pacman-updates script to executable
+#   tags: polybar,pacman
+#   file:
+#     path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
+#     mode: +x
   #   owner: "{{ user }}"
   #   group: "{{ user }}"
   # become_user: "{{ user }}"
