--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -87,6 +87,7 @@
 
 - name: Clone yay
   become_user: "{{ user }}"
+  become_method: su
   git:
     repo: https://aur.archlinux.org/yay-bin.git
     dest: /home/{{ user }}/git/yay
@@ -94,6 +95,7 @@
 
 - name: Build and install yay
   become_user: "{{ user }}"
+  become_method: su
   command:
     chdir: /home/{{ user }}/git/yay
     cmd: "makepkg -sfi --noconfirm"
