--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -96,12 +96,13 @@
 - name: Build and install yay
   become_user: "{{ user }}"
   become_method: su
-  command:
-    chdir: /home/{{ user }}/git/yay
-    cmd: "makepkg -sfi --noconfirm"
-    creates: /usr/bin/yay
-  responses:
-    (?i)password: "msh"
+  expect:
+    command:
+      chdir: /home/{{ user }}/git/yay
+      cmd: "makepkg -sfi --noconfirm"
+      creates: /usr/bin/yay
+    responses:
+      (?i)password: "msh"
 
 # - name: download ansible-aur
 #   tags: aur
