--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ log_path = /var/log/ansible.log
 callbacks_enabled = timer, profile_tasks, profile_roles
 interpreter_python = auto_silent
 deprecation_warnings=False
+ansible_python_interpreter="/usr/bin/env python"
