--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -104,6 +104,16 @@
     dest: /home/{{ user }}/git/yay
     update: true
 
+- name: install python-pip
+  pacman:
+    name: 
+      - python-pip
+  state: latest
+
+- name: install pexpect
+  pip:
+    name: pexpect
+
 - name: Build and install yay
   become_user: "{{ user }}"
   become_method: su
