--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -108,16 +108,23 @@
 #   pip:
 #     name: pexpect
 
+# - name: Build and install yay
+#   become_user: "{{ user }}"
+#   become_method: su
+#   expect:
+#     command:
+#       chdir: /home/{{ user }}/git/yay
+#       cmd: "makepkg -sfi --noconfirm"
+#       creates: /usr/bin/yay
+#     responses:
+#       (?i)password: "msh"
+
 - name: Build and install yay
   become_user: "{{ user }}"
-  become_method: su
-  expect:
-    command:
-      chdir: /home/{{ user }}/git/yay
-      cmd: "makepkg -sfi --noconfirm"
-      creates: /usr/bin/yay
-    responses:
-      (?i)password: "msh"
+  command:
+    chdir: /home/{{ user }}/git/yay
+    cmd: "makepkg -sfi --noconfirm"
+    creates: /usr/bin/yay
 
 - name: Install package from AUR using a Pacman compatible AUR helper
   pacman:
