--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -61,6 +61,7 @@
       - python-psutil
       - fuse2
       - python-pip
+      - python-pexpect
 
       # Terminal/Shell
       - ttf-nerd-fonts-symbols
